# modrinth_downloader

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: build.yml  release.yml
examples/: config.toml
src/: hash.rs  main.rs
src/configuration/: mod.rs
src/download/: hash.rs  mod.rs
src/modrinth/: mod.rs
