[package]
name = "modrinth_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["rustls-tls", "json"], default-features = false }
futures = "0.3"
anyhow = "1.0"
toml = "0.5"
sha2 = "0.10"
rayon = "1.7"
hex = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["serde_derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-unwrap = "0.10"
log = "0.4"
dashmap = "5.4"

[dependencies.tokio]
version = "1.26"
features = ["rt-multi-thread", "macros", "parking_lot", "io-util", "fs", "sync"]