[package]
name = "modrinth-downloader"
version = "1.5.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["rustls-tls", "json"], default-features = false }
futures = "0.3"
color-eyre = "0.6"
toml = "0.5"
sha2 = "0.10"
rayon = "1.7"
hex = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["serde_derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
dashmap = "5.4"
thiserror = "1.0.40"

[dependencies.tokio]
version = "1.26"
features = ["rt-multi-thread", "macros", "parking_lot", "io-util", "fs", "sync"]
