[package]
name = "modrinth-downloader"
version = "1.9.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.7", features = ["json"] }
color-eyre = "0.6"
toml = "0.5"
sha2 = "0.10"
hex = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["serde_derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5.4"
thiserror = "1.0.40"
url = "2.4"
chrono = "0.4.26"
